intent acarken ki sorun giderildi. ayrica shared pref ile not kaydi yapildi..

--- a/app/src/main/res/layout/widget_liste_itemi.xml
+++ b/app/src/main/res/layout/widget_liste_itemi.xml
@@ -10,5 +10,6 @@
         android:id="@+id/widget_liste_itemi_yazi"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:gravity="center" />
 </RelativeLayout>
