--- a/app/src/main/res/drawable/arkaplan.xml
+++ b/app/src/main/res/drawable/arkaplan.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:color="#44cccccc" android:width="2dp"/>
-    <solid android:color="@android:color/transparent"/>
+    <solid android:color="#11cccccc"/>
 </shape>
