--- a/app/src/main/res/layout/sag_secim_liste_itemi.xml
+++ b/app/src/main/res/layout/sag_secim_liste_itemi.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:id="@+id/saglayici_liste_itemi_taban">
+    android:id="@+id/sag_secim_liste_itemi_taban">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="abc"
-        android:id="@+id/widget_liste_itemi_yazi"
+        android:id="@+id/sag_secim_liste_itemi_yazi"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:textColor="@android:color/white"
-        android:gravity="center" />
+        android:textColor="@android:color/darker_gray"
+        android:gravity="center"
+        android:textSize="18dp" />
 </RelativeLayout>
