--- a/app/src/main/res/layout/sag_li.xml
+++ b/app/src/main/res/layout/sag_li.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:id="@+id/sag_secim_liste_itemi_taban">
+    android:id="@+id/sag_li_taban">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="abc"
-        android:id="@+id/sag_secim_liste_itemi_yazi"
+        android:id="@+id/sag_li_yazi"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:textColor="@android:color/darker_gray"
