--- a/app/src/main/res/layout/sol_li_acil.xml
+++ b/app/src/main/res/layout/sol_li_acil.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:id="@+id/sol_cerceve_liste_itemi_taban">
+    android:id="@+id/sol_li_acil_taban">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="abc"
-        android:id="@+id/sol_cerceve_liste_itemi_yazi"
+        android:text="test bu la..."
+        android:id="@+id/sol_li_acil_yazi"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:textColor="@android:color/white"
         android:gravity="center" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="34dp"
+        android:text="ac"
+        android:id="@+id/button"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
